<resources>
    <string name="app_name">CloneFoody</string>
    <string name="facebook_app_id">343258069463864</string>
    <string name="version_app">Version</string>
    <string name="loading">Đang tải…</string>
    <string name="name_company">HunterIT</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="todo">TODO</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dang_nhap_bang_tai_khoan_cua_ban">Hoặc đăng nhập bằng tài khoản của bạn</string>
    <string name="dia_chi_email_cua_ban">Địa chỉ email của bạn</string>
    <string name="mat_khau_cua_ban">Mật khẩu của bạn</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="khong_su_dung_thong_tin">Chúng tôi sẽ không sử dụng thông tin của bạn với bất kỳ mục tiêu nào khác.</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="ten_hien_thi">Tên hiên thị</string>
    <string name="dong_y_voi">Bằng cách đăng ký, bạn đồng ý với</string>
    <string name="dieu_khoan_su_dung">Điều khoản sử dụng</string>
</resources>
