<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.RegisterFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_button" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.32999998">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dang_ky"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border_edittext_login"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_edittext_login_bottom"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_email_white_24dp"
                android:drawableTint="@color/Login_drawable"
                android:ems="10"
                android:hint="@string/dia_chi_email_cua_ban"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorLink="@color/Login_Phone"
                android:textSize="14sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/edt_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_edittext_login_bottom"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock_outline_white_24dp"
                android:drawableTint="@color/Login_drawable"
                android:ems="10"
                android:hint="@string/mat_khau_cua_ban"
                android:inputType="textPassword"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_Password_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_edittext_login_bottom"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock_outline_white_24dp"
                android:drawableTint="@color/Login_drawable"
                android:ems="10"
                android:hint="@string/nhap_lai_mat_khau"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorLink="@color/Login_Phone"
                android:textSize="14sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/edt_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_perm_identity_white_24dp"
                android:drawableTint="@color/Login_drawable"
                android:ems="10"
                android:hint="@string/ten_hien_thi"
                android:inputType="textPassword"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="14sp" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_Register_Default"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:cardElevation="1dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/dang_ky"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/txtv_su_dung_thong_tin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/khong_su_dung_thong_tin"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/dong_y_voi"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dieu_khoan_su_dung"
                android:textColor="@color/Login_face"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_DangNhap"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dang_nhap"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>